# docx_mcp_formatting

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  USAGE_EXAMPLES.md  pyproject.toml
.aitk/: mcp.json
src/: __init__.py  server.py
