[project]
name = "docx_mcp_formatting"
version = "0.1.0"
description = "MCP server for creating, reading, and fully editing DOCX files with Azure Blob Storage support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.4.1",
    "python-docx>=1.1.0",
    "azure-storage-blob>=12.19.0",
    "Pillow>=10.0.0"
]

[project.optional-dependencies]
dev = ["debugpy==1.8.8"]